force-app/main/default/objects/Dynamic_Form_Configuration__c/Dynamic_Form_Configuration__c.object-meta.xml
<CustomObject>
    <label>Dynamic Form Configuration</label>
    <nameField>
        <label>Dynamic Form Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Form Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>