force-app/main/default/objects/Dynamic_Form_Configuration__c/fields/Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Button_Label__c</fullName>
    <label>Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>