force-app/main/default/objects/Dynamic_Form_Configuration__c/fields/Configuration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Configuration_JSON__c</fullName>
    <label>Configuration JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>