force-app/main/default/objects/Dynamic_Form_Configuration__c/fields/Context_Object__c.field-meta.xml
<CustomField>
    <fullName>Context_Object__c</fullName>
    <label>Context Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>